implement signup and login of the user using jwt

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 FLASK_ENV=development
 SECRET_KEY=qp02348jrqj43rpqj34pqjr
+JWT_SECRET_KEY=qp02348jrqj43rpqj34pqjr
 DATABASE_URL=postgresql://campy_admin:password@localhost/campy_db
