--- a/Pipfile
+++ b/Pipfile
@@ -20,6 +20,7 @@ flask-login = "*"
 alembic = "*"
 flask-migrate = "*"
 flask-restful = "*"
+flask-jwt-extended = "*"
 
 [requires]
 python_version = "3.8"
