--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 FLASK_ENV=development
 SECRET_KEY=qp02348jrqj43rpqj34pqjr
 JWT_SECRET_KEY=qp02348jrqj43rpqj34pqjr
+JWT_ACCESS_TOKEN_EXPIRES=64080
 DATABASE_URL=postgresql://campy_admin:password@localhost/campy_db
