--- a/Pipfile
+++ b/Pipfile
@@ -19,6 +19,7 @@ flask-migrate = "*"
 flask-restful = "*"
 flask-jwt-extended = "*"
 flask-restx = "*"
+gunicorn = "*"
 
 [requires]
 python_version = "3.8"
